--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="src/constants.js"></script>
 
     <!-- game screens -->
+    <script type="text/javascript" src="src/gamelogic.js"></script>
     <script type="text/javascript" src="src/gameplay.js"></script>
     <script type="text/javascript" src="src/load.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
